--- a/MyPad/Views/MainWindow.xaml
+++ b/MyPad/Views/MainWindow.xaml
@@ -55,6 +55,9 @@
 
     <!-- イベントトリガー -->
     <i:Interaction.Triggers>
+        <l:InteractionMessageTrigger MessageKey="Activate" Messenger="{Binding Messenger, Mode=OneWay}">
+            <behaviors:WindowActivateAction/>
+        </l:InteractionMessageTrigger>
         <l:InteractionMessageTrigger MessageKey="ScrollToCaret" Messenger="{Binding Messenger, Mode=OneWay}">
             <i:CallMethodAction MethodName="ScrollToCaret" TargetObject="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Mode=OneWay}"/>
         </l:InteractionMessageTrigger>
