--- a/MyPad/Views/Regions/OptionContentView.xaml
+++ b/MyPad/Views/Regions/OptionContentView.xaml
@@ -260,21 +260,33 @@
                             </m:DropDownButton>
                         </Grid>
 
-                        <Border Height="10"/>
+                        <Border Height="15"/>
 
-                        <ge:ResponsiveGrid>
-                            <ge:ResponsiveGrid.Resources>
-                                <Style TargetType="{x:Type Button}" BasedOn="{StaticResource Default.Button}">
-                                    <Setter Property="Margin" Value="5"/>
-                                    <Style.Resources>
-                                        <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource Default.TextBlock}">
-                                            <Setter Property="VerticalAlignment" Value="Center"/>
-                                        </Style>
-                                    </Style.Resources>
-                                </Style>
-                            </ge:ResponsiveGrid.Resources>
+                        <GroupBox Header="{le:Loc Label_SystemSettings}">
+                            <ge:ResponsiveGrid>
+                                <ge:ResponsiveGrid.Resources>
+                                    <Style TargetType="{x:Type Button}" BasedOn="{StaticResource Default.Button}">
+                                        <Setter Property="Margin" Value="5"/>
+                                        <Setter Property="ge:ResponsiveGrid.XS" Value="12"/>
+                                        <Setter Property="ge:ResponsiveGrid.SM" Value="6"/>
+                                        <Style.Resources>
+                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource Default.TextBlock}">
+                                                <Setter Property="VerticalAlignment" Value="Center"/>
+                                            </Style>
+                                        </Style.Resources>
+                                    </Style>
+                                    <Style x:Key="This.DangerButton" TargetType="{x:Type Button}" BasedOn="{StaticResource Common.DangerButton}">
+                                        <Setter Property="Margin" Value="5"/>
+                                        <Setter Property="ge:ResponsiveGrid.XS" Value="12"/>
+                                        <Setter Property="ge:ResponsiveGrid.SM" Value="6"/>
+                                        <Style.Resources>
+                                            <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource Default.TextBlock}">
+                                                <Setter Property="VerticalAlignment" Value="Center"/>
+                                            </Style>
+                                        </Style.Resources>
+                                    </Style>
+                                </ge:ResponsiveGrid.Resources>
 
-                            <StackPanel ge:ResponsiveGrid.XS="12" ge:ResponsiveGrid.SM="6" Margin="5">
                                 <Button Command="{Binding ImportSettingsFileCommand, Mode=OneTime}">
                                     <StackPanel Orientation="Horizontal">
                                         <mi:FontAwesome Kind="FileImportSolid"/>
@@ -289,18 +301,15 @@
                                         <TextBlock Text="{le:Loc Command_ExportSettings}"/>
                                     </StackPanel>
                                 </Button>
-                            </StackPanel>
-
-                            <StackPanel ge:ResponsiveGrid.XS="12" ge:ResponsiveGrid.SM="6" Margin="5">
-                                <Button Command="{Binding InitializeSettingsCommand, Mode=OneTime}">
+                                <Button Command="{Binding InitializeSettingsCommand, Mode=OneTime}" Style="{StaticResource This.DangerButton}">
                                     <StackPanel Orientation="Horizontal">
                                         <mi:Material Kind="CogRefresh"/>
                                         <Border Width="5"/>
                                         <TextBlock Text="{le:Loc Command_InitializeSettings}"/>
                                     </StackPanel>
                                 </Button>
-                            </StackPanel>
-                        </ge:ResponsiveGrid>
+                            </ge:ResponsiveGrid>
+                        </GroupBox>
                     </StackPanel>
                 </ScrollViewer>
             </TabItem>
