[update] 全画面表示した際、全画面表示を解除するためのボタンを表示するように変更

--- a/MyPad/Views/MainWindow.xaml
+++ b/MyPad/Views/MainWindow.xaml
@@ -149,9 +149,9 @@
     <!-- 画面コンテンツ -->
     <Grid ge:GridEx.RowDefinition="Auto, Auto, *, Auto">
         <ContentControl Grid.Row="0" Style="{StaticResource RegionContent}" p:RegionManager.RegionName="MenuBarRegion2"
-                        Visibility="{qc:MultiBinding '$P0 ## !$P1 ? Visibility.Visible : Visibility.Collapsed',
-                                     P0={Binding SettingsService.System.ShowMenuBar, Mode=OneWay},
-                                     P1={Binding ShowTitleBar, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type Window}}}}"
+                        Visibility="{qc:MultiBinding '!$P0 ## $P1 ? Visibility.Visible : Visibility.Collapsed',
+                                     P0={Binding ShowTitleBar, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type Window}}},
+                                     P1={Binding SettingsService.System.ShowMenuBar, Mode=OneWay}}"
                         ContextMenu="{StaticResource ContextMenu}"/>
         <ContentControl Grid.Row="1" Style="{StaticResource RegionContent}" p:RegionManager.RegionName="ToolBarRegion"
                         Visibility="{qc:Binding '$P ? Visibility.Visible : Visibility.Collapsed', P={Binding SettingsService.System.ShowToolBar, Mode=OneWay}}"
@@ -159,6 +159,22 @@
         <ContentControl Grid.Row="3" Style="{StaticResource RegionContent}" p:RegionManager.RegionName="StatusBarRegion"
                         Visibility="{qc:Binding '$P ? Visibility.Visible : Visibility.Collapsed', P={Binding SettingsService.System.ShowStatusBar, Mode=OneWay}}"
                         ContextMenu="{StaticResource ContextMenu}"/>
+
+        <Button Grid.Row="0" Command="{Binding SwitchFullScreenModeCommand, Mode=OneTime, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" ToolTip="{le:Loc Command_SwitchFullScreenMode}" Focusable="False"
+                Style="{DynamicResource MahApps.Styles.Button.Chromeless}" Padding="10 5" VerticalAlignment="Top" HorizontalAlignment="Right"
+                Visibility="{qc:MultiBinding '!$P0 ## $P1 ? Visibility.Visible : Visibility.Collapsed',
+                             P0={Binding ShowTitleBar, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type Window}}},
+                             P1={Binding SettingsService.System.ShowMenuBar, Mode=OneWay}}">
+            <mi:PackIconModern Kind="Fullscreen" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"/>
+        </Button>
+        <Button Grid.Row="1" Command="{Binding SwitchFullScreenModeCommand, Mode=OneTime, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" ToolTip="{le:Loc Command_SwitchFullScreenMode}" Focusable="False"
+                Style="{DynamicResource MahApps.Styles.Button.Chromeless}" Padding="10 5" VerticalAlignment="Top" HorizontalAlignment="Right"
+                Visibility="{qc:MultiBinding '!$P0 ## !$P1 ## $P2 ? Visibility.Visible : Visibility.Collapsed',
+                             P0={Binding ShowTitleBar, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type Window}}},
+                             P1={Binding SettingsService.System.ShowMenuBar, Mode=OneWay},
+                             P2={Binding SettingsService.System.ShowToolBar, Mode=OneWay}}">
+            <mi:PackIconModern Kind="Fullscreen" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"/>
+        </Button>
 
         <Grid Grid.Row="2">
             <Grid.Resources>
